--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,11 @@
         "laravel/fortify": "^1.26",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.1",
+        "laravel/telescope": "^5.9",
         "laravel/tinker": "^2.10.1",
         "livewire/flux": "^2.1.1",
         "livewire/volt": "^1.7.0",
+        "owen-it/laravel-auditing": "^14.0",
         "spatie/laravel-permission": "^6.19"
     },
     "require-dev": {
