--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "filament/filament": "^3.3",
         "laravel/fortify": "^1.26",
         "laravel/framework": "^12.0",
+        "laravel/horizon": "^5.33",
         "laravel/reverb": "^1.5",
         "laravel/sanctum": "^4.1",
         "laravel/telescope": "^5.9",
