--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "php": "^8.2",
         "bezhansalleh/filament-shield": "^3.3",
         "filament/filament": "^3.3",
+        "intervention/image-laravel": "^1.5",
         "laravel/fortify": "^1.26",
         "laravel/framework": "^12.0",
         "laravel/horizon": "^5.33",
@@ -19,6 +20,7 @@
         "livewire/flux": "^2.1.1",
         "livewire/volt": "^1.7.0",
         "owen-it/laravel-auditing": "^14.0",
+        "spatie/laravel-medialibrary": "^11.13",
         "spatie/laravel-permission": "^6.19"
     },
     "require-dev": {
