--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "livewire/flux": "^2.1.1",
         "livewire/volt": "^1.7.0",
         "owen-it/laravel-auditing": "^14.0",
+        "spatie/laravel-backup": "^9.3",
         "spatie/laravel-medialibrary": "^11.13",
         "spatie/laravel-permission": "^6.19"
     },
